...
  @override
  Widget build(BuildContext context) {
    final uid = FirebaseAuth.instance.currentUser?.uid;
    return Scaffold(
      backgroundColor: const Color(0xFF0A0E0A),
      appBar: AppBar(
          title: const Text("Carrinho"),
          backgroundColor: Colors.transparent),
      body: StreamBuilder<QuerySnapshot>(
        stream: FirebaseFirestore.instance
            .collection('usuarios')
            .doc(uid)
            .collection('carrinho')
            .snapshots(),
        builder: (context, snapshot) {
          if (!snapshot.hasData || snapshot.data!.docs.isEmpty) {
            return const Center(
                child: Text("Vazio",
                    style: TextStyle(color: Colors.white)));
          }

          final docs = snapshot.data!.docs;
          double total = docs.fold(
              0,
...
                  fontSize: 20,
                  fontWeight: FontWeight.bold)),
          const SizedBox(height: 15),
          Row(
            mainAxisAlignment: MainAxisAlignment.spaceEvenly,
            children: [
              _btn(Icons.pix, "Pix",
                      () => _processarPagamento(total: total, itens: docs, metodo: 'pix')),
              _btn(Icons.barcode_reader, "Boleto",
                      () => _processarPagamento(total: total, itens: docs, metodo: 'bolbradesco')),
              _btn(Icons.credit_card, "Cartão",
                      () => _abrirFormularioCartao(total, docs)),
            ],
...
    showModalBottomSheet(
        context: context,
        backgroundColor: const Color(0xFF1A1A1A),
        builder: (_) => Container(
          padding: const EdgeInsets.all(20),
          child: Column(mainAxisSize: MainAxisSize.min, children: [
            const Text("QR Code Pix",
                style: TextStyle(
                    color: Colors.white, fontWeight: FontWeight.bold)),
            const SizedBox(height: 10),
            Container(
              color: Colors.white,
              padding: const EdgeInsets.all(10),
...
              style: TextStyle(color: Colors.grey, fontSize: 12),
              textAlign: TextAlign.center,
            ),
            TextButton(
                onPressed: () =>
                    Clipboard.setData(ClipboardData(text: code)),
                child: const Text("Copiar Código Pix"))
          ]),
        ));
  }

  void _abrirUrl(String url) async =>
      await launchUrl(Uri.parse(url), mode: LaunchMode.externalApplication);
...
