...
            borderRadius: BorderRadius.circular(10),
          ),
          child: TextField(
            controller: _searchController,
            style: const TextStyle(color: Colors.white, fontSize: 16),
            decoration: const InputDecoration(
              hintText: "Pesquisar no AgroVale...",
              hintStyle: TextStyle(color: Colors.grey),
              prefixIcon: Icon(Icons.search, color: Colors.green),
              border: InputBorder.none,
              contentPadding: EdgeInsets.symmetric(vertical: 10),
            ),
            onChanged: (value) => setState(() => searchTerm = value),
...
                            await FirestoreService().adicionarAoCarrinho(user.uid, {'id': id, 'nome': p['nome'], 'preco': preco, 'imagem': p['imagem']});
                            Navigator.pop(context);
                            ScaffoldMessenger.of(context).showSnackBar(SnackBar(content: Text("${p['nome']} adicionado!")));
                          }
                        },
                        icon: const Icon(Icons.add_shopping_cart),
                        label: const Text("ADICIONAR AO CARRINHO", style: TextStyle(fontWeight: FontWeight.bold)),
                      ),
                    ),
                  ],
                ),
              ),
            ],
...
